--- a/restaurantsRV.html
+++ b/restaurantsRV.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
     <title>Restaurants Ravensburg</title>
 
     <link href="resources/css/bootstrap.min.css" rel="stylesheet">
@@ -14,37 +16,42 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color: #7F6E64">
+<body style="background-color: #7F6E64" onload="changeLogin()">
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="d-flex flex-grow-1">
-				<span class="w-100 d-lg-none d-block">
-					<!-- hidden spacer to center brand on mobile -->
-				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
-					restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-					restaurando
-				</a>
-				<div class="w-100 text-right">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</div>
-			</div>
-			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-				<ul class="navbar-nav ml-auto flex-nowrap">
-					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
-					<li class="nav-item"><a href="restaurantsFN.html" class="nav-link m-2 menu-item">Restaurants</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"><img
-								src="/resources/img/login.png"> Login</button>
+            <a class="navbar-brand" href="index.html">restaurando</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-					</li>
-				</ul>
-			</div>
-		</nav>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto" id="navbar-left-btns">
+                    <li class="nav-item active"><a class="nav-link" href="index.html">Home <span
+                                class="sr-only">(current)</span>
+                        </a></li>
+                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Restaurants
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="restaurantsRV.html">Restaurants
+                                Ravensburg</a> <a class="dropdown-item" href="restaurantsFN.html">Restaurants
+                                Friedrichshafen</a> <a class="dropdown-item" href="restaurantsULM.html">Restaurants
+                                Ulm</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Kontakt</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <button onclick="document.getElementById('id01').style.display='block'" style="width: auto;">
+                            <img src="/resources/img/login.png"> Login
+                        </button>
+
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
 		<div id="id01" class="modal">
 			<form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
@@ -55,17 +62,25 @@
 				</div>
 
 				<div class="container">
-					<label for="usernameinput"><b>Benutzername</b></label>
-					<input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50"
+					<label for="type"><b>Rolle</b></label>
+					<select required id="type" class="contact-text-input" name="type" onchange="changeLogin()">
+						<option value="0">Rolle auswählen</option>
+						<option value="1">Administrator</option>
+						<option value="2">Restaurantbesitzer</option>
+					</select>
+					<label id="namelabel" for="usernameinput"><b>Benutzername</b></label>
+					<input id="username" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
 						required>
 					<br>
-					<label for="passwordinput"><b>Passwort</b></label>
-					<input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
+					<label id="pwlabel" for="passwordinput"><b>Passwort</b></label>
+					<input id="pw" type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30"
+						required>
 					<br>
 					<button type="submit">Login</button>
+					<script src="/resources/js/login.js"></script>
 				</div>
 			</form>
-        </div>
+		</div>
         
     <div class="jumbotron text-center" id="jumbotronIndex2">
         <div id="titletext">
